random color working + some some graphic changes

--- a/style.css
+++ b/style.css
@@ -50,6 +50,9 @@ body {
 .buttonContainer{
     padding: 20px;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 button{
     padding: 10px;
